mark-donated completed
