# server/Routes/VolunteerRoute.js
@@ -1,5 +1,5 @@
 import express from 'express';
-import { registerVolunteer, loginVolunteer, joinCamp, updateVolunteerLocation,findNearestCamps,searchBloodDonationCamps , myCamps } from '../Controllers/VolunteerController.js';
+import { registerVolunteer, loginVolunteer, joinCamp, updateVolunteerLocation,findNearestCamps,searchBloodDonationCamps , myCamps, markAppointmentAsDonated } from '../Controllers/VolunteerController.js';
 
 const volunteerroute = express.Router();
 
@@ -10,4 +10,5 @@ volunteerroute.post('/location/', updateVolunteerLocation);
 volunteerroute.get('/campsearch/:query', searchBloodDonationCamps);
 volunteerroute.post('/nearestcamps', findNearestCamps);
 volunteerroute.get('/mycamps/:volunteerId', myCamps);
+volunteerroute.post('/mark-donated', markAppointmentAsDonated);
 export default volunteerroute;
